<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DragAndDraw</string>
    <string name="hello_world">Hello world!</string>
    <!--<string name="action_settings">Settings</string>-->
    <string name="action_settings">The quick brown fox jumps over the lazy dog</string>

    <string name="rectangle">R</string>
    <string name="triangle">T</string>
    <string name="circle">C</string>

    <string name="export_drawing">Export Drawing</string>
    <string name="share_drawing">Share Drawing</string>
    <string name="share_drawing_to">Share Drawing To</string>
    <string name="new_drawing">New Drawing</string>
    <string name="delete_drawing">Delete Drawing</string>

    <string name="drawing_item_content_description">Thumbnail preview</string>
    <string name="drawing_item_selected">Drawing selected</string>

</resources>
