<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".EditorActivity">
    <item
        android:id="@+id/export_drawing"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/export_drawing"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/share_drawing"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share_drawing"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/delete_drawing"
        android:title="@string/delete_drawing"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom|withText"/>
</menu>
