<LinearLayout
    android:id="@+id/fragmentContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DragAndDrawActivity">


    <com.bignerdranch.android.draganddraw.BoxDrawingView
        android:id="@+id/viewBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <LinearLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:id="@+id/shapeOptions"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <com.bignerdranch.android.draganddraw.ColorfulRadioGroup
                android:id="@+id/buttonShape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.bignerdranch.android.draganddraw.ColorfulRadioButton
                    android:id="@+id/buttonRectangle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/rectangle"/>

                <com.bignerdranch.android.draganddraw.ColorfulRadioButton
                    android:id="@+id/buttonTriangle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/triangle"/>

                <com.bignerdranch.android.draganddraw.ColorfulRadioButton
                    android:id="@+id/buttonCircle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/circle"/>
            </com.bignerdranch.android.draganddraw.ColorfulRadioGroup>

            <SeekBar
                android:id="@+id/alphaBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:paddingEnd="15dp"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:paddingStart="15dip"
                android:progress="127"
                android:indeterminate="false"/>
        </LinearLayout>

        <com.bignerdranch.android.draganddraw.ToggleButtonGroupTableLayout
            android:id="@+id/buttonColor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                >

                <com.bignerdranch.android.draganddraw.CircleRadioButton
                    android:id="@+id/buttonRed"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:checked="true"
                    app:cb_color="@color/red"
                    app:cb_pressedRingWidth="5dip"
                    />

                <com.bignerdranch.android.draganddraw.CircleRadioButton
                    android:id="@+id/buttonGreen"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    app:cb_color="@color/green"
                    app:cb_pressedRingWidth="5dip"/>

                <com.bignerdranch.android.draganddraw.CircleRadioButton
                    android:id="@+id/buttonBlue"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    app:cb_color="@color/blue"
                    app:cb_pressedRingWidth="5dip"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                >

                <com.bignerdranch.android.draganddraw.CircleRadioButton
                    android:id="@+id/buttonOrange"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    app:cb_color="@color/orange"
                    app:cb_pressedRingWidth="5dip"
                    />

                <com.bignerdranch.android.draganddraw.CircleRadioButton
                    android:id="@+id/buttonYellow"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    app:cb_color="@color/Gold"
                    app:cb_pressedRingWidth="5dip"/>

                <com.bignerdranch.android.draganddraw.CircleRadioButton
                    android:id="@+id/buttonPurple"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    app:cb_color="@color/purple"
                    app:cb_pressedRingWidth="5dip"/>
            </TableRow>
        </com.bignerdranch.android.draganddraw.ToggleButtonGroupTableLayout>

    </LinearLayout>

</LinearLayout>
